src/app/components/task/task.component.scss
@use "src/styles/abstracts/colors" as colors;
@use "src/styles/abstracts/style" as style;
@use "src/styles/abstracts/fonts" as fonts;

.project-task-item.TASK_ARCHIVED input[type="text"] {
  color: colors.$color-archived;
  text-decoration: line-through;
}

.project-task-item {
  color: colors.$color-text-dark;

  button {
    width: auto;
  }
}

mat-form-field {
  flex-grow: 1;
}

.example-menu {
  border-radius: style.$border-radius-0;
  display: inline-flex;
  flex-direction: column;
  min-width: 100px;
  box-shadow: style.$box-shadow;
}

.example-menu .example-menu-item {
  width: 100%;
  border-radius: style.$border-radius-0;
  text-align: left;
}

.example-menu-item:hover {
  background-color: rgb(208, 208, 208);
}

.example-menu-item:active {
  background-color: rgb(170, 170, 170);
}

.example-standalone-item {
  background-color: rgb(239, 239, 239);
}

.example-standalone-item:hover {
  background-color: rgb(208, 208, 208);
}

.task-controls {
  padding: 0.8rem;

  .task-information {
    margin-bottom: 0.4rem;

    .task-title {
      font-weight: 500;
    }

    .task-content {
      font-size: 0.8rem;
    }
  }

  .task-status {
    gap: 0.4rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    font-family: fonts.$font-mono;

    .badge {
      margin-left: auto;
    }
  }
}

@mixin task-badge() {
  height: min-content;
  background: colors.$app-bg-main-lighter;
  border-radius: 4px;
}

.task-status {
  height: 1.2rem;
  font-size: 1.2rem;

  .task-code {
    @include task-badge();
    display: flex;
    align-items: center;
    height: inherit;
    font-size: 0.7em;
    font-weight: 100;
    color: rgb(colors.$color-text-dark, 0.6);
  }

  .priority {
    @include task-badge();
    height: inherit;
    background: colors.$app-bg-main-lighter;
    border-radius: 4px;
    font-size: inherit;

    &.lowest {
      color: #5992ff;
    }

    &.medium {
      color: #cbae27;
    }

    &.high {
      color: #ff773d;
    }

    &.highest {
      color: #e86767;
    }
  }

  .badge {
    //font-size: 0.7em;

    &.todo {
      background: colors.$color-blue;
    }

    &.in-progress {
      background: colors.$color-yellow;
    }

    &.blocked {
      background: colors.$color-red;
    }

    &.done {
      background: colors.$color-green;
    }
  }
}

@media screen and (max-width: 844px) {
  .content {
  }
}

